--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
+body{
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei,
+  Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font-variant: tabular-nums;
+  font-feature-settings: "tnum";
+  -webkit-font-smoothing: antialiased;
 }
